# bruce-rf-deliver

./: QUICKSTART.md  README.md
desktop-player/: README.md  example_signal.json  player.py
docs/: API.md  wire-format.md
liblil/: lil.h
liblil/liblil.xcframework/: Info.plist
src/firmware/: ble_rf_autostart.cpp  ble_rf_autostart.h  ble_rf_capture.cpp  ble_rf_capture.h  ble_rf_mini.c  ble_rf_mini.h  ble_rf_service.cpp  ble_rf_service.h  main_ble.c
src/liblil/: CMakeLists.txt
src/liblil/cmake/: android-ndk.toolchain.cmake  ios.toolchain.cmake  mingw-w64.toolchain.cmake
src/liblil/examples/: README.md  cli_demo.c
src/liblil/examples/ios-demo/: Package.swift
src/liblil/examples/ios-demo/Sources/CLil/: module.modulemap
src/liblil/examples/ios-demo/Sources/LilDemo/: main.swift
src/liblil/src/: lil_decoder.c  lil_protocols.c  lil_wire.c
src/liblil/src/jni/: lil_jni.c
src/liblil/tests/: CMakeLists.txt  test_decoder.c  test_protocols.c  test_wire.c
src/lil-kotlin/: build.gradle.kts  settings.gradle.kts
src/lil-kotlin/gradle/: libs.versions.toml
src/lil-kotlin/sample-android/: build.gradle.kts
src/lil-kotlin/sample-android/src/main/: AndroidManifest.xml
src/lil-kotlin/sample-android/src/main/kotlin/ru/pluttan/lil/sample/: LilSampleApp.kt  MainActivity.kt
src/lil-kotlin/sample-android/src/main/res/values/: strings.xml  themes.xml
test-apps/: cli_demo-linux
